--- a/spark-3.1.1/conf/spark-defaults.conf
+++ b/spark-3.1.1/conf/spark-defaults.conf
@@ -34,10 +34,10 @@ spark.hadoop.fs.s3a.committer.staging.conflict-mode fail
 spark.hadoop.fs.s3a.impl org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.path.style.access true
 
-#spark.hadoop.fs.s3a.endpoint http://localhost:9000
-#spark.hadoop.fs.s3a.connection.ssl.enabled false
-#spark.hadoop.fs.s3a.access.key accesskey
-#spark.hadoop.fs.s3a.secret.key secretkey
+spark.hadoop.fs.s3a.endpoint http://localhost:9000
+spark.hadoop.fs.s3a.connection.ssl.enabled false
+spark.hadoop.fs.s3a.access.key accesskey
+spark.hadoop.fs.s3a.secret.key secretkey
 
 spark.hive.metastore.uris thrift://localhost:9083
 
