--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,12 +32,21 @@ services:
     command: server /data
 
   metastore:
-    image: hive-metastore
+    image: registry.gitlab.com/gha1/hive-metastore
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - HIVEMS_PASSWORD=hivems
+      - HIVEMS_ENCRYPTED_PASSWORD=md54507e4128ef7e8b157fa8aeb399035f0
+      - POSTGRES_HOST=postgresql
+      - POSTGRES_PORT=5432
+      - S3_ENDPOINT=http://minio:9000
+      - S3_ACCESS_KEY=accesskey
+      - S3_SECRET_KEY=secretkey
     ports:
       - 9083:9083
 
   gha2minio:
-    image: gha2/gha2minio:latest
+    image: registry.gitlab.com/gha1/gha2minio:latest
     environment:
       - SERVER=minio:9000
       - UNSECURE=yes
@@ -45,7 +54,8 @@ services:
       - SECRET_KEY=secretkey
       - WAIT_SECONDS=30
       - MAX_DOWNLOADS=5
-      - BACK_DAYS=1
+      - BACK_DAYS=0
+      - BUCKET_FORMAT=gharaw
     volumes:
       - gha2minio_data:/data
 
