--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 #      - "8081:80"
 #    volumes:
 #      - "pgadmin_data:/var/lib/pgadmin"
-
+#
   minio:
     image: minio/minio
     environment:
@@ -42,6 +42,7 @@ services:
       - S3_ENDPOINT=http://minio:9000
       - S3_ACCESS_KEY=accesskey
       - S3_SECRET_KEY=secretkey
+      - LOG_LEVEL=INFO
     ports:
       - 9083:9083
 
