--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 /gha-workbench.iml
 
 spark-3.1.1/*
-!spark-3.1.1/conf
-!spark-3.1.1/kubernetes
-spark-3.1.1/kubernetes/tests
+!spark-3.1.1/conf/log4j.properties
+!spark-3.1.1/conf/spark-defaults.conf
+!spark-3.1.1/kubernetes/dockerfiles/spark/entrypoint.sh
 
 
 
