--- a/spark-3.1.1/conf/spark-defaults.conf
+++ b/spark-3.1.1/conf/spark-defaults.conf
@@ -25,3 +25,19 @@
 # spark.serializer                 org.apache.spark.serializer.KryoSerializer
 # spark.driver.memory              5g
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
+
+spark.hadoop.mapreduce.outputcommitter.factory.scheme.s3a org.apache.hadoop.fs.s3a.commit.S3ACommitterFactory
+spark.hadoop.fs.s3a.committer.name directory
+spark.hadoop.fs.s3a.committer.staging.tmp.path /tmp/spark_staging
+spark.hadoop.fs.s3a.buffer.dir /tmp/spark_local_buf
+spark.hadoop.fs.s3a.committer.staging.conflict-mode fail
+spark.hadoop.fs.s3a.impl org.apache.hadoop.fs.s3a.S3AFileSystem
+spark.hadoop.fs.s3a.path.style.access true
+
+#spark.hadoop.fs.s3a.endpoint https://minio1.shared1/
+#spark.hadoop.fs.s3a.access.key minio
+#spark.hadoop.fs.s3a.secret.key minio123
+
+#spark.hive.metastore.uris thrift://tcp1.shared1:9083
+
+
