Improve README.md

--- a/spark-3.1.1/conf/spark-defaults.conf
+++ b/spark-3.1.1/conf/spark-defaults.conf
@@ -41,4 +41,4 @@ spark.hadoop.fs.s3a.secret.key minio123
 
 spark.hive.metastore.uris thrift://tcp1.kspray1.ctb01:9083
 
-
+#spark.history.fs.logDirectory s3a://spark/eventlogs
