--- a/spark-3.1.1/conf/spark-defaults.conf
+++ b/spark-3.1.1/conf/spark-defaults.conf
@@ -34,8 +34,8 @@ spark.hadoop.fs.s3a.committer.staging.conflict-mode fail
 spark.hadoop.fs.s3a.impl org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.path.style.access true
 
-spark.hadoop.fs.s3a.endpoint https://minio1.shared1/
-#spark.hadoop.fs.s3a.endpoint https://minio1.ingress.kspray1.ctb01/
+#spark.hadoop.fs.s3a.endpoint https://minio1.shared1/
+spark.hadoop.fs.s3a.endpoint https://minio1.ingress.kspray1.ctb01/
 spark.hadoop.fs.s3a.access.key minio
 spark.hadoop.fs.s3a.secret.key minio123
 
