Move S3 access parameter from global configuration to a secret

--- a/spark-operator/spark-j2p.yaml
+++ b/spark-operator/spark-j2p.yaml
@@ -44,18 +44,34 @@ spec:
     - "raw/year={{year}}/month={{month}}/day={{day}}/hour={{hour}}"
     - --appName
     - spark-j2p
+    # The following does not work. Seems 'arguments' are not interpolated with env variable.
+    # So, the variable fetching is handled in the code of the application.
+    # - --s3Endpoint
+    # - "${S3_ENDPOINT}"
   sparkConf:
     "spark.kubernetes.file.upload.path": "s3a://spark/shared"
     "spark.hadoop.fs.s3a.impl": "org.apache.hadoop.fs.s3a.S3AFileSystem"
     "spark.hadoop.fs.s3a.fast.upload": "true"
-    "spark.hadoop.fs.s3a.endpoint": "https://minio1.shared1"
-    "spark.hadoop.fs.s3a.connection.ssl.enabled": "true"
-    "spark.hadoop.fs.s3a.access.key": "minio"
-    "spark.hadoop.fs.s3a.secret.key": "minio123"
     "spark.hadoop.fs.s3a.path.style.access": "true"
     "spark.eventLog.enabled": "true"
     "spark.eventLog.dir": "s3a://spark/eventlogs"
   driver:
+    env:
+      - name: S3_ENDPOINT
+        valueFrom:
+          secretKeyRef:
+            name: spark-minio-server
+            key: server
+      - name: S3_ACCESS_KEY
+        valueFrom:
+          secretKeyRef:
+            name: spark-minio-server
+            key: accessKey
+      - name: S3_SECRET_KEY
+        valueFrom:
+          secretKeyRef:
+            name: spark-minio-server
+            key: secretKey
     cores: 1
     coreLimit: "4"
     memory: "4G"
