--- a/spark-operator/spark-pi-scheduled.yaml
+++ b/spark-operator/spark-pi-scheduled.yaml
@@ -17,7 +17,7 @@ apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: ScheduledSparkApplication
 metadata:
   name: spark-pi
-  namespace: spark-operator
+  namespace: spark1
 spec:
   schedule: "@every 1m"
   concurrencyPolicy: Forbid
@@ -39,7 +39,7 @@ spec:
       memory: "512m"
       labels:
         version: 3.1.1
-      serviceAccount: spark-operator1-spark
+      serviceAccount: spark
     executor:
       cores: 1
       instances: 1
