--- a/spark-operator/spark-pi.yaml
+++ b/spark-operator/spark-pi.yaml
@@ -17,7 +17,7 @@ apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
   name: spark-pi
-  namespace: spark-operator
+  namespace: spark1
 spec:
   type: Scala
   mode: cluster
@@ -28,27 +28,16 @@ spec:
   sparkVersion: "3.1.1"
   restartPolicy:
     type: Never
-  volumes:
-    - name: "test-volume"
-      hostPath:
-        path: "/tmp"
-        type: Directory
   driver:
     cores: 1
     coreLimit: "1200m"
     memory: "512m"
     labels:
       version: 3.1.1
-    serviceAccount: spark-operator1-spark
-    volumeMounts:
-      - name: "test-volume"
-        mountPath: "/tmp"
+    serviceAccount: spark
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
       version: 3.1.1
-    volumeMounts:
-      - name: "test-volume"
-        mountPath: "/tmp"
