Fix some typos.

--- a/spark-3.1.1/conf/spark-defaults.conf
+++ b/spark-3.1.1/conf/spark-defaults.conf
@@ -33,6 +33,7 @@ spark.hadoop.fs.s3a.buffer.dir /tmp/spark_local_buf
 spark.hadoop.fs.s3a.committer.staging.conflict-mode fail
 spark.hadoop.fs.s3a.impl org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.path.style.access true
+#spark.jars.ivy /tmp/.ivy
 
 #spark.hadoop.fs.s3a.endpoint https://minio1.shared1/
 spark.hadoop.fs.s3a.endpoint https://minio1.ingress.kspray1.ctb01/
